Cwel.Docs.Web/Assets/scss/_content-area.scss
.content-area__container {
    display: block;
    width: 100%;
    min-height: 200px;
    padding-left: 10px;
    padding-right: 10px;
    padding-top: 10px;
    padding-bottom: 10px;
    margin-bottom: 20px;
    border-radius: 4px;
    border-width: 1px;
    border-style: solid;
    border-color: $secondary2;
    background: $core2;
}
.content-area__container--output {
    margin-bottom: -40px; // collapses docs playground container padding
    border: none;
    border-top-width: 1px;
    border-top-style: solid;
    border-top-color: $secondary2;
    border-radius: 0;
}
.content-area__container--docs-title {
    margin-top: -40px; // collapses docs playground container padding
    min-height: 0;
    border: none;
    border-bottom-width: 1px;
    border-bottom-style: solid;
    border-bottom-color: $secondary2;
    border-radius: 0;
}
.content-area__container .button--icon-only {
    background: $white;
}
.content-area__title {
    display: block;
    margin-bottom: 10px;
    font-size: 0.9rem;
    color: $core1;
}

